--- a/package.json
+++ b/package.json
@@ -14,10 +14,21 @@
     "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^4.1.3",
     "@icons-pack/react-simple-icons": "^12.1.0",
+    "@langchain/openai": "^0.4.4",
+    "@lexical/code": "^0.27.1",
+    "@lexical/link": "^0.27.1",
+    "@lexical/list": "^0.27.1",
+    "@lexical/mark": "^0.27.1",
+    "@lexical/react": "^0.27.1",
+    "@lexical/rich-text": "^0.27.1",
+    "@lexical/selection": "^0.27.1",
+    "@lexical/utils": "^0.27.1",
+    "@lexical/yjs": "^0.27.1",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-context-menu": "^2.2.6",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -26,6 +37,8 @@
     "@radix-ui/react-menubar": "^1.1.6",
     "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
@@ -42,14 +55,16 @@
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
-    "framer-motion": "^12.4.10",
+    "lexical": "^0.27.1",
     "lucide-react": "^0.477.0",
+    "motion": "^12.4.10",
     "next": "15.2.1",
     "next-themes": "^0.4.4",
     "pinecone-client": "^2.0.0",
     "prisma": "^6.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-force-graph-2d": "^1.27.0",
     "react-force-graph-3d": "^1.26.0",
     "react-hook-form": "^7.54.2",
@@ -64,6 +79,7 @@
     "tailwindcss-animate": "^1.0.7",
     "together-ai": "^0.13.0",
     "uuid": "^11.1.0",
+    "yjs": "^13.6.24",
     "youtube-transcript": "^1.2.1",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
