--- a/package.json
+++ b/package.json
@@ -49,12 +49,32 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.49.1",
     "@types/uuid": "^10.0.0",
+    "@yoopta/accordion": "^4.9.4",
+    "@yoopta/action-menu-list": "^4.9.4",
+    "@yoopta/blockquote": "^4.9.4",
+    "@yoopta/callout": "^4.9.4",
+    "@yoopta/code": "^4.9.4",
+    "@yoopta/divider": "^4.9.4",
+    "@yoopta/editor": "^4.9.4",
+    "@yoopta/embed": "^4.9.4",
+    "@yoopta/file": "^4.9.4",
+    "@yoopta/headings": "^4.9.4",
+    "@yoopta/image": "^4.9.4",
+    "@yoopta/link": "^4.9.4",
+    "@yoopta/link-tool": "^4.9.4",
+    "@yoopta/lists": "^4.9.4",
+    "@yoopta/marks": "^4.9.4",
+    "@yoopta/paragraph": "^4.9.4",
+    "@yoopta/table": "^4.9.4",
+    "@yoopta/toolbar": "^4.9.4",
+    "@yoopta/video": "^4.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "geist": "^1.3.1",
     "lexical": "^0.27.1",
     "lucide-react": "^0.477.0",
     "motion": "^12.4.10",
@@ -90,9 +110,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.12",
     "typescript": "^5"
   }
 }
